Fix spacing of elements to account for changes with footer

--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@
   width: 100%;
   height: 33vh; /*528px*/
   padding: 0.625rem;
-  margin-top: 3.5rem;
+  /* margin-top: 3.5rem; */
   /* margin-top: 2.6875rem; */
   position: relative;
 }
